--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBvW48eJAII921V6gzmezm5e7Y49eoHczI",
+    authDomain: "multiplayer-car-racing-g-26172.firebaseapp.com",
+    databaseURL: "https://multiplayer-car-racing-g-26172-default-rtdb.firebaseio.com",
+    projectId: "multiplayer-car-racing-g-26172",
+    storageBucket: "multiplayer-car-racing-g-26172.appspot.com",
+    messagingSenderId: "934997049521",
+    appId: "1:934997049521:web:3e6d6b19cabc4bf4752290"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 <script src="./p5.play.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
